--- a/index.html
+++ b/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Expecting</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags unless you know what you are doing -->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+      <link rel="stylesheet" type="text/css" href="assets/styles/index.scss">
+      <link href="https://fonts.googleapis.com/css?family=Mandali" rel="stylesheet">
 
       <!-- Do not add `script` tags unless you know what you are doing -->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+    <body class="container-fluid">
+
+      <p class="title">Expecting?</p>
+
+      <p>Track the growth of your baby!</p>
+
+      <form id="sign-up" class="topcorner">
+        <fieldset>
+          <input type="text" class="hidden" name="credentials[email]" placeholder="email">
+          <input type="password" class="hidden" name="credentials[password]" placeholder="password">
+          <input type="password" class="hidden" name="credentials[password_confirmation]" placeholder="confirm password">
+          <input type="submit" name="submit" value="register">
+        </fieldset>
+      </form>
+
+      <form id="sign-in" class="topcorner_two">
+        <fieldset>
+          <input type="text" class="hidden" name="credentials[email]" placeholder="email">
+          <input type="password" class="hidden" name="credentials[password]" placeholder="password">
+          <input type="submit" name="submit" value="log in">
+        </fieldset>
+      </form>
+
+      <img src="assets/images/baby.png" class="pulse" alt="baby"/>
+
     </body>
 </html>
