--- a/index.html
+++ b/index.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Expecting</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title>Expecting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags unless you know what you are doing -->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-      <link rel="stylesheet" type="text/css" href="assets/styles/index.scss">
-      <link href="https://fonts.googleapis.com/css?family=Mandali" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/styles/index.scss">
+  <link href="https://fonts.googleapis.com/css?family=Mandali" rel="stylesheet">
 
-      <!-- Do not add `script` tags unless you know what you are doing -->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
 
-    <body class="container-fluid">
+<body class="container-fluid">
 
-      <p class="title">Expecting?</p>
-
+  <header>
+    <div class="title">
+      <h1>Expecting?</h1>
       <p>Track the growth of your baby!</p>
+    </div>
 
-      <form id="sign-up" class="topcorner">
+   <div class="sign-in-area">
+      <button id="register" class="topcorner">register</button>
+      <button id="log-in" class="topcorner_two">log in</button>
+
+      <form id="sign-up" class="hidden">
         <fieldset>
-          <input type="text" class="hidden" name="credentials[email]" placeholder="email">
-          <input type="password" class="hidden" name="credentials[password]" placeholder="password">
-          <input type="password" class="hidden" name="credentials[password_confirmation]" placeholder="confirm password">
-          <input type="submit" name="submit" value="register">
+          <input type="text" name="credentials[email]" placeholder="email">
+          <input type="password" name="credentials[password]" placeholder="password">
+          <input type="password" name="credentials[password_confirmation]" placeholder="confirm password">
+          <input type="submit" name="submit" value="sign up">
         </fieldset>
       </form>
 
-      <form id="sign-in" class="topcorner_two">
+      <form id="sign-in" class="hidden">
         <fieldset>
-          <input type="text" class="hidden" name="credentials[email]" placeholder="email">
-          <input type="password" class="hidden" name="credentials[password]" placeholder="password">
-          <input type="submit" name="submit" value="log in">
+          <input type="text" name="credentials[email]" placeholder="email">
+          <input type="password" name="credentials[password]" placeholder="password">
+          <input type="submit" name="submit" value="sign in">
         </fieldset>
       </form>
+    </div>
+  </header>
 
-      <img src="assets/images/baby.png" class="pulse" alt="baby"/>
+  <img src="assets/images/baby.png" class="pulse" alt="baby"/>
 
-    </body>
+  <form id="change-password" class="hidden">
+    <fieldset>
+      <input type="password" name="passwords[old]" placeholder="old password">
+      <input type="password" name="passwords[new]" placeholder="new password">
+      <input type="submit" name="submit" value="change password">
+    </fieldset>
+  </form>
+
+  <form id="sign-out" class="hidden">
+    <fieldset>
+      <input type="submit" name="submit" value="sign out">
+    </fieldset>
+  </form>
+</body>
 </html>
