Builds full sign-in function

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <input type="submit" name="submit" value="sign in">
         </fieldset>
       </form>
+
+      <div class="signInErrorMessage"></div>
+
     </div>
   </header>
 
