Builds create baby function, communicates with back-end

--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
 
   </header>
 
-  <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1493922931/baby_d77ene.png" class="pulse" alt="baby"/>
+  <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1493922931/baby_d77ene.png" class="pulse home-img" alt="baby"/>
 
+  <div class="input-age-area hidden">
+    <form id="input-age">
+      How far along are you?<br>
+      <input type="number" name="age" min="4" max="45"><br>
+      <input type="submit" value="submit">
+    </form>
+  </div>
 </body>
 </html>
