--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
   <div class="input-age-area hidden">
     <form id="input-age">
       How far along are you?<br>
-      <input type="number" name="age" min="4" max="45"><br>
+      <input type="number" name="baby[age]" min="4" max="45"><br>
       <input type="submit" value="submit">
+      <!-- <button type="submit"></button> -->
     </form>
   </div>
 </body>
