--- a/index.html
+++ b/index.html
@@ -17,61 +17,54 @@
   <header>
     <div class="title">
       <h1>Expecting?</h1>
-      <p>Track the growth of your baby!</p>
+      <p class="tagline">Track the growth of your baby!</p>
     </div>
+  </header>
 
    <div class="sign-in-area">
-      <button id="register">register</button>
-      <button id="log-in">log in</button>
+    <button id="register">register</button>
+    <button id="log-in">log in</button>
 
-      <form id="sign-up" class="hidden">
+    <form id="sign-up" class="hidden">
         <fieldset>
           <input type="text" name="credentials[email]" placeholder="email">
           <input type="password" name="credentials[password]" placeholder="password">
           <input type="password" name="credentials[password_confirmation]" placeholder="confirm password">
-          <input type="submit" name="submit" value="sign up">
+          <button type="submit" name="submit" value="sign up">sign up</button>
         </fieldset>
       </form>
 
-      <form id="sign-in" class="hidden">
+    <form id="sign-in" class="hidden">
         <fieldset>
           <input type="text" name="credentials[email]" placeholder="email">
           <input type="password" name="credentials[password]" placeholder="password">
-          <input type="submit" name="submit" value="sign in">
+          <button type="submit" name="submit" value="sign in">sign in</button>
         </fieldset>
       </form>
 
-      <div class="signInErrorMessage"></div>
+    <div class="signInErrorMessage"></div>
+  </div>
 
-    </div>
+  <div class="sign-out-area">
+    <button id="change-pwd" class="hidden change-pwd-button">change password</button>
+    <button type="submit" name="submit" value="sign out" class="sign-out-button hidden" id="sign-out">sign out</button>
 
-      <div class="sign-out-area">
-        <button id="change-pwd" class="hidden">change password</button>
-        <form id="change-password" class="hidden">
-          <fieldset>
-            <input type="password" name="passwords[old]" placeholder="old password">
-            <input type="password" name="passwords[new]" placeholder="new password">
-            <input type="submit" name="submit" value="change password">
-          </fieldset>
-        </form>
-
-        <form id="sign-out" class="hidden">
-          <fieldset>
-            <input type="submit" name="submit" value="sign out">
-          </fieldset>
-        </form>
-      </div>
-
-  </header>
+    <form id="change-password" class="hidden">
+      <fieldset>
+        <input type="password" name="passwords[old]" placeholder="old password">
+        <input type="password" name="passwords[new]" placeholder="new password">
+        <button type="submit" name="submit" value="change password">change password</button>
+      </fieldset>
+    </form>
+  </div>
 
   <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1493922931/baby_d77ene.png" class="pulse home-img" alt="baby"/>
 
   <div class="input-age-area hidden">
     <form id="input-age">
-      How far along are you?<br>
-      <input type="number" name="baby[age]" min="4" max="45"><br>
-      <input type="submit" value="submit">
-      <!-- <button type="submit"></button> -->
+      I am <input class="age-box" style="display:inline" type="number" name="baby[age]" min="4" max="45"> weeks pregnant.
+      <br><br>
+      <button style="opacity:0.8" type="submit" value="submit">submit</button>
     </form>
   </div>
 </body>
