--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
       <button style="opacity:0.8" type="submit" value="submit">submit</button>
     </form>
   </div>
+
+  <div class="view-baby-stat hidden">
+    <button class="baby-stat">View your baby's latest status!</button>
+  </div>
 </body>
 </html>
