Connects update baby with image/ text switch

--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
 
   <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1493922931/baby_d77ene.png" class="pulse home-img" alt="baby"/>
 
+  <div class="baby-size-display">
+    <img src="assets/images/week4.png" id="weekImg4" class="baby-size-img"/>
+    <img src="assets/images/week6.png" id="weekImg6" class="baby-size-img"/>
+    <img src="assets/images/week7.png" id="weekImg7" class="baby-size-img"/>
+    <img src="assets/images/week9.png" id="weekImg9" class="baby-size-img"/>
+    <img src="assets/images/week11.png" id="weekImg11" class="baby-size-img"/>
+    <img src="assets/images/week12.png" id="weekImg12" class="baby-size-img"/>
+    <img src="assets/images/week13.png" id="weekImg13" class="baby-size-img"/>
+    <img src="assets/images/week14.png" id="weekImg14" class="baby-size-img"/>
+    <img src="assets/images/week16.png" id="weekImg16" class="baby-size-img"/>
+    <img src="assets/images/week17.png" id="weekImg17" class="baby-size-img"/>
+    <img src="assets/images/week18.png" id="weekImg18" class="baby-size-img"/>
+    <img src="assets/images/week24.png" id="weekImg24" class="baby-size-img"/>
+    <img src="assets/images/week40.png" id="weekImg40" class="baby-size-img"/>
+  </div>
+
+  <aside class="baby-size-text"></aside>
+
   <div class="input-age-area hidden">
     <form id="input-age">
       I am <input class="age-box" style="display:inline" type="number" name="baby[age]" min="4" max="45"> weeks pregnant.
