Changes local images to hosted images

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
   <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1493922931/baby_d77ene.png" class="pulse home-img" alt="baby"/>
 
   <div class="baby-size-display">
-    <img src="assets/images/week4.png" id="weekImg4" class="baby-size-img"/>
-    <img src="assets/images/week6.png" id="weekImg6" class="baby-size-img"/>
-    <img src="assets/images/week7.png" id="weekImg7" class="baby-size-img"/>
-    <img src="assets/images/week9.png" id="weekImg9" class="baby-size-img"/>
-    <img src="assets/images/week11.png" id="weekImg11" class="baby-size-img"/>
-    <img src="assets/images/week12.png" id="weekImg12" class="baby-size-img"/>
-    <img src="assets/images/week13.png" id="weekImg13" class="baby-size-img"/>
-    <img src="assets/images/week14.png" id="weekImg14" class="baby-size-img"/>
-    <img src="assets/images/week16.png" id="weekImg16" class="baby-size-img"/>
-    <img src="assets/images/week17.png" id="weekImg17" class="baby-size-img"/>
-    <img src="assets/images/week18.png" id="weekImg18" class="baby-size-img"/>
-    <img src="assets/images/week24.png" id="weekImg24" class="baby-size-img"/>
-    <img src="assets/images/week40.png" id="weekImg40" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188307/week4_mdnq4t.png" id="weekImg4" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188331/week6_kmc4pp.png" id="weekImg6" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188346/week7_uggttl.png" id="weekImg7" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188315/week9_m7isja.png" id="weekImg9" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188342/week11_i7k8xb.png" id="weekImg11" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188322/week12_biua6l.png" id="weekImg12" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188355/week13_vj8too.png" id="weekImg13" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188329/week14_bejozy.png" id="weekImg14" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188350/week15_oispnp.png" id="weekImg15" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188345/week17_ert94b.png" id="weekImg17" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188354/week18_tmgiuu.png" id="weekImg18" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188360/week24_lwyi58.png" id="weekImg24" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494188364/week40_glqq76.png" id="weekImg40" class="baby-size-img"/>
   </div>
 
   <aside class="baby-size-text"></aside>
