Builds remove baby function, modifies UX accordingly

--- a/index.html
+++ b/index.html
@@ -89,5 +89,7 @@
   <div class="view-baby-stat hidden">
     <button class="baby-stat">View your baby's latest status!</button>
   </div>
+
+  <button class="remove-baby hidden">reset</button>
 </body>
 </html>
