Makes flow of events more intuitive

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210154/projecttwo/week40.png" id="weekImg40" class="baby-size-img"/>
   </div>
 
-  <aside class="baby-size-text"></aside>
+  <div class="baby-size-text"></div>
 
   <div class="input-age-area hidden">
     <form id="input-age">
