Adds more images

--- a/index.html
+++ b/index.html
@@ -62,17 +62,33 @@
 
   <div class="baby-size-display">
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210131/projecttwo/week4.png" id="weekImg4" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216220/projecttwo/week5.png" id="weekImg5" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210133/projecttwo/week6.png" id="weekImg6" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210148/projecttwo/week7.png" id="weekImg7" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216235/projecttwo/week8.png" id="weekImg8" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210137/projecttwo/week9.png" id="weekImg9" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216239/projecttwo/week10.png" id="weekImg10" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210142/projecttwo/week11.png" id="weekImg11" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210132/projecttwo/week12.png" id="weekImg12" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210150/projecttwo/week13.png" id="weekImg13" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210137/projecttwo/week14.png" id="weekImg14" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210138/projecttwo/week15.png" id="weekImg15" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216237/projecttwo/week16.png" id="weekImg16" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210151/projecttwo/week17.png" id="weekImg17" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210148/projecttwo/week18.png" id="weekImg18" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216236/projecttwo/week19.png" id="weekImg19" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216236/projecttwo/week20.png" id="weekImg20" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216236/projecttwo/week21.png" id="weekImg21" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216266/projecttwo/week22.png" id="weekImg22" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216268/projecttwo/week23.png" id="weekImg23" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210148/projecttwo/week24.png" id="weekImg24" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216270/projecttwo/week25.png" id="weekImg25" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216243/projecttwo/week26.png" id="weekImg26" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216271/projecttwo/week27.png" id="weekImg27" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216247/projecttwo/week28.png" id="weekImg28" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216251/projecttwo/week29.png" id="weekImg29" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216267/projecttwo/week31.png" id="weekImg31" class="baby-size-img"/>
+    <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216253/projecttwo/week32.png" id="weekImg32" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210154/projecttwo/week40.png" id="weekImg40" class="baby-size-img"/>
   </div>
 
