--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <div class="title">
       <h1>Expecting?</h1>
-      <p class="tagline">Track the growth of your baby!</p>
+      <p class="tagline ">Track the growth of your baby!</p>
     </div>
   </header>
 
@@ -53,7 +53,7 @@
       <fieldset>
         <input type="password" name="passwords[old]" placeholder="old password">
         <input type="password" name="passwords[new]" placeholder="new password">
-        <button class="reset" type="submit" name="submit" value="change password">change password</button>
+        <button type="submit" name="submit" value="change password">change password</button>
       </fieldset>
     </form>
   </div>
