--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       <fieldset>
         <input type="password" name="passwords[old]" placeholder="old password">
         <input type="password" name="passwords[new]" placeholder="new password">
-        <button type="submit" name="submit" value="change password">change password</button>
+        <button type="submit" name="submit" value="change password">submit</button>
       </fieldset>
     </form>
+
+    <div class="change-pwd-error hidden"></div>
   </div>
 
   <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210142/projecttwo/baby2.png" class="pulse home-img" alt="baby"/>
@@ -92,7 +94,7 @@
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210154/projecttwo/week40.png" id="weekImg40" class="baby-size-img"/>
   </div>
 
-  <div class="baby-size-text"></div>
+  <div class="baby-size-text hidden"></div>
 
   <div class="input-age-area hidden">
     <form id="input-age">
