--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210142/projecttwo/baby2.png" class="pulse home-img" alt="baby"/>
 
-  <div class="baby-size-display">
+  <div class="baby-size-display hidden">
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210131/projecttwo/week4.png" id="weekImg4" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494216220/projecttwo/week5.png" id="weekImg5" class="baby-size-img"/>
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210133/projecttwo/week6.png" id="weekImg6" class="baby-size-img"/>
