Simplifies get image based on age function

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="change-pwd-error hidden"></div>
   </div>
 
-  <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494210142/projecttwo/baby2.png" class="pulse home-img" alt="baby"/>
+  <img src="assets/images/baby2.PNG" class="pulse home-img" alt="baby"/>
 
   <div class="baby-size-display hidden">
     <img src="http://res.cloudinary.com/xiangcatherine/image/upload/v1494271946/projecttwo/transparent.png" class="baby-size-img">
