Makes user unable to delete without having a baby

--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
   <div class="baby-size-text hidden"></div>
 
   <button class="remove-baby hidden">reset</button>
+  <div class="remove-baby-message"></div>
 </body>
 </html>
