Cleans up code and removes console logs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
 </head>
 
-<body class="container-fluid">
+<body id="container-fluid" class="faded">
 
   <header>
     <div class="title">
@@ -76,6 +76,7 @@
 
   <div class="view-baby-stat hidden">
     <button class="baby-stat">View your baby's latest status!</button>
+    <div class="update-baby-error"></div>
   </div>
 
   <div class="baby-size-text hidden"></div>
