Adds sign up error message

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <button class="reset" type="submit" name="submit" value="sign up">sign up</button>
         </fieldset>
       </form>
+      <div class="sign-up-error-message"></div>
 
     <form id="sign-in" class="hidden">
         <fieldset>
